[project]
name = "codeaskcli"
version = "0.1.0"
description = "根据代码调用llm自动生成解析文档"
authors = [{ name = "shadow3", email = "shadow3aaaa@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "simplejson>=3.20.1",
    "zstandard>=0.23.0",
    "tomli>=2.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
]

[project.scripts]
codeaskcli = "codeaskcli.cli:main"
